--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,5 +1,6 @@
 
-name: Integration
+
+name: Node.js CI
 
 on:
   push:
@@ -15,21 +16,22 @@ jobs:
     strategy:
       matrix:
         node-version: [18.x, 20.x, 22.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - name: "Installing Dependencies"
+    - name: "INSTALLING DEPENDENCIES"
       run: npm i
-
-    - name: "Build command"
+      
+    - name: "BUILD COMMAND"
       run: npm run build
 
-  unit-tests:
+  unit-tests: 
 
     runs-on: ubuntu-latest
 
@@ -40,12 +42,12 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - name: "Installing Dependencies"
+    - name: "INSTALLING DEPENDENCIES"
       run: npm i
 
-    - name: "Running test cases"
+    - name: "RUNNING TEST CASES"
       run: npm run test
